--- a/jhipster/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/jhipster/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -118,14 +118,14 @@
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
         >
-          <!-- <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="entity-menu" data-cy="entity">
+          <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="entity-menu" data-cy="entity">
             <span>
               <fa-icon icon="th-list"></fa-icon>
               <span>Entities</span>
             </span>
           </a>
-          <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="entity-menu"> -->
-            <!-- <li>
+          <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="entity-menu">
+            <li>
               <a
                 class="dropdown-item"
                 routerLink="thiet-bi"
@@ -232,11 +232,11 @@
                 <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
                 <span>Quan Ly Thong So</span>
               </a>
-            </li> -->
+            </li>
             <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
-          <!-- </ul>
-        </li> -->
-        <!-- <li
+          </ul>
+        </li>
+        <li
           *jhiHasAnyAuthority="'ROLE_ADMIN'"
           ngbDropdown
           class="nav-item dropdown pointer"
@@ -286,10 +286,10 @@
                 <fa-icon icon="book" [fixedWidth]="true"></fa-icon>
                 <span>API</span>
               </a>
-            </li> -->
+            </li>
             <!-- jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here -->
-          <!-- </ul>
-        </li> -->
+          </ul>
+        </li>
         <li
           ngbDropdown
           class="nav-item dropdown pointer"
