--- a/jhipster/src/main/webapp/app/layouts/main/main.component.html
+++ b/jhipster/src/main/webapp/app/layouts/main/main.component.html
@@ -4,7 +4,7 @@
   <router-outlet name="navbar"></router-outlet>
 </div>
 
-<div class="container-fluid">
+<div >
   <div class="card jh-card">
     <router-outlet></router-outlet>
   </div>
