--- a/jhipster/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/jhipster/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -45,21 +45,6 @@
           </li>
         </ul>
 
-        <!-- <div class="user-info">
-          <a class="nav-link" routerLink="account/settings" (click)="collapseNavbar()" data-cy="settings">
-            <fa-icon icon="wrench" [fixedWidth]="true"></fa-icon>
-            <span>Cài đặt</span>
-          </a>
-          <a class="nav-link" routerLink="account/password" (click)="collapseNavbar()" data-cy="passwordItem">
-            <fa-icon icon="lock" [fixedWidth]="true"></fa-icon>
-            <span>Mật khẩu</span>
-          </a>
-          <a class="nav-link" (click)="logout()" data-cy="logout">
-            <fa-icon icon="sign-out-alt" [fixedWidth]="true"></fa-icon>
-            <span>Đăng xuất</span>
-          </a>
-        </div> -->
-
         <li
           ngbDropdown
           class="nav-item dropdown pointer"
@@ -77,7 +62,38 @@
             </span>
           </a>
 
-          
+         <ul>
+          <li >
+            <a
+                class="dropdown-item"
+                routerLink="account/settings"
+                routerLinkActive="active"
+                (click)="collapseNavbar()"
+                data-cy="settings"
+              >
+                <fa-icon icon="wrench" [fixedWidth]="true"></fa-icon>
+                <span>Settings</span>
+              </a>
+            </li>
+          <li>
+             <a
+                class="dropdown-item"
+                routerLink="account/password"
+                routerLinkActive="active"
+                (click)="collapseNavbar()"
+                data-cy="passwordItem"
+              >
+                <fa-icon icon="lock" [fixedWidth]="true"></fa-icon>
+                <span>Password</span>
+              </a>
+          </li>
+          <li>
+            <a class="dropdown-item" (click)="logout()" id="logout" data-cy="logout">
+                <fa-icon icon="sign-out-alt" [fixedWidth]="true"></fa-icon>
+                <span>Sign out</span>
+              </a>
+            </li>
+         </ul>
 
       </nav>
     </div>
@@ -87,7 +103,7 @@
       <span class="logo-img"></span>
       <span class="navbar-title">Rạng Đông</span>
     </a> -->
-    <a
+    <!-- <a
       class="navbar-toggler d-lg-none"
       href="javascript:void(0);"
       data-toggle="collapse"
@@ -99,6 +115,7 @@
     >
       <fa-icon icon="bars"></fa-icon>
     </a>
+    <h1>công ty cổ phần bóng đèn và phích nước rạng đông</h1>
     <div class="navbar-collapse collapse" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed" [ngSwitch]="account !== null">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
@@ -109,7 +126,7 @@
             </span>
           </a>
         </li>
-        <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
+        
         <li
           *ngSwitchCase="true"
           ngbDropdown
@@ -233,7 +250,7 @@
                 <span>Quan Ly Thong So</span>
               </a>
             </li>
-            <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
+            
           </ul>
         </li>
         <li
@@ -287,7 +304,7 @@
                 <span>API</span>
               </a>
             </li>
-            <!-- jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here -->
+           
           </ul>
         </li>
         <li
@@ -346,6 +363,6 @@
           </ul>
         </li>
       </ul>
-    </div>
+    </div> -->
   </div>
 </nav>
