--- a/jhipster/src/main/webapp/app/entities/thiet-bi/edit/edit.component.html
+++ b/jhipster/src/main/webapp/app/entities/thiet-bi/edit/edit.component.html
@@ -3,7 +3,7 @@
     <form name="editForm" role="form" novalidate [formGroup]="editForm">
       <div>
         
-        <h2 id="jhi-thiet-bi-heading" data-cy="ThietBiCreateUpdateHeading">Thêm mới thiết bị</h2>
+        <h2 id="jhi-thiet-bi-heading" data-cy="ThietBiCreateUpdateHeading">Chỉnh sửa thiết bị</h2>
         <div>
           <jhi-alert-error></jhi-alert-error>
   
@@ -68,10 +68,7 @@
           </button>
       </div>
 
-        <h2 id="jhi-thiet-bi-heading" data-cy="ThietBiCreateUpdateHeading">Thêm mới thông số thiết bị</h2>
-        <!-- <button id="jh-create-entity" class="btn btn-primary jh-create-entity create-thong-so-may" (click)="addRow()">
-            <fa-icon icon="plus"></fa-icon>
-          </button> -->
+        <h2 id="jhi-thiet-bi-heading" data-cy="ThietBiCreateUpdateHeading">Chỉnh sửa thông số thiết bị</h2>
 
         <button class="btn-add" style="border-radius: 0.5em;" (click)="addRow()">Add</button>
 
