--- a/jhipster/src/main/webapp/app/login/login.component.html
+++ b/jhipster/src/main/webapp/app/login/login.component.html
@@ -1,6 +1,8 @@
 <div>
   <div class="d-flex justify-content-center">
     <div class="col-lg-6 col-md-8 col-sm-10">
+      <img src="../../content/images/logo-icon.png" alt="logo-RangDong">
+      <h2>công ty cổ phần bóng đèn và phích nước Rạng Đông</h2>
       <h1 data-cy="loginTitle">Đăng nhập</h1>
       <div class="alert alert-danger" *ngIf="authenticationError" data-cy="loginError">
         <strong>Đăng nhập thất bại</strong> Vui lòng kiểm tra lại.
