--- a/jhipster/src/main/webapp/content/scss/global.scss
+++ b/jhipster/src/main/webapp/content/scss/global.scss
@@ -69,10 +69,9 @@ Generic styles
 
 /* other generic styles */
 
-
-
 .jh-card {
   position: absolute;
+  height: auto;
   right: 0;
   width: 87%;
   margin-left: 14%;
