--- a/jhipster/src/main/webapp/app/entities/thiet-bi/detail/thiet-bi-detail.component.html
+++ b/jhipster/src/main/webapp/app/entities/thiet-bi/detail/thiet-bi-detail.component.html
@@ -60,6 +60,85 @@
 
     
 
+      <button type="submit" (click)="previousState()" class="btn btn-primary" data-cy="entityDetailsBackButton">
+        <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>Back</span>
+      </button>
+
+      <button type="button" [routerLink]="['/thiet-bi', thietBi.id, 'edit']" class="btn btn-primary">
+        <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>Edit</span>
+      </button>
+    </div>
+  </div>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+
+<div class="d-flex justify-content-center">
+  <div class="col-8">
+    <div *ngIf="thietBi">
+      <h2 data-cy="thietBiDetailsHeading"><span>Chi tiết thông số thiết bị</span></h2>
+
+      <hr />
+
+      <jhi-alert-error></jhi-alert-error>
+
+      <jhi-alert></jhi-alert>
+
+      <table class="table table-striped" aria-describedby="page-heading">
+        <thead>
+          <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending">
+            <th scope="col" jhiSortBy="id"><span>STT</span></th>
+            <th scope="col" jhiSortBy="thongSo"><span>Thông số</span></th>
+            <th scope="col" jhiSortBy="thongSo"><span>Mô tả</span></th>
+            <th scope="col" jhiSortBy="thongSo"><span>Phân loại</span></th>
+            <th scope="col" jhiSortBy="thongSo"><span>Ngày tạo</span></th>
+            <th scope="col" jhiSortBy="thongSo"><span>Ngày cập nhật</span></th>
+            <th scope="col" jhiSortBy="thongSo"><span>Update By</span></th>
+            <th scope="col" jhiSortBy="trangThai"><span>Trạng thái</span></th>
+          </tr>
+        </thead>
+
+        <tbody *ngFor="let i=index">
+          
+        <td>
+          <span>{{ i+1 }}</span>
+        </td>
+        
+        <td>
+          <span>{{ thietBi.maThietBi }}</span>
+        </td>
+        
+        <td>
+          <span>{{ thietBi.loaiThietBi }}</span>
+        </td>
+        
+        <td>
+          <span>{{ thietBi.dayChuyen }}</span>
+        </td>
+        
+        <td>
+          <span>{{ thietBi.ngayTao | formatMediumDatetime }}</span>
+        </td>
+        
+        <td>
+          <span>{{ thietBi.timeUpdate | formatMediumDatetime }}</span>
+        </td>
+        
+        <td>
+          <span>{{ thietBi.updateBy }}</span>
+        </td>
+        
+        <td>
+          <span>{{ thietBi.status }}</span>
+        </td>
+        </tbody>
+      </table>
+
+    
+
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>Back</span>
       </button>
