--- a/jhipster/src/main/webapp/content/scss/_bootstrap-variables.scss
+++ b/jhipster/src/main/webapp/content/scss/_bootstrap-variables.scss
@@ -7,8 +7,8 @@
 
 // Colors:
 // Grayscale and brand colors for use across Bootstrap.
-
-$primary: #3e8acc;
+$color-font: #fff;
+$primary: #0d6efd;
 $success: #28a745;
 $info: #17a2b8;
 $warning: #ffc107;
